all the work, not a lot of progress

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Hash Maps</h1>
-  <script src="./hashmaps.js"></script>
+  <script src="./hashmaps-separate-chaining.js"></script>
 </body>
 </html>
